--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <title>Statistical Learning Project</title>
     <script src="demo/main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Statistical Learning Project</h1>
+    <h2>Predict Market Value of Soccer Players</h2>
+  </body>
 </html>
