solved prediction bug + exp transform

--- a/index.html
+++ b/index.html
@@ -301,5 +301,8 @@
       <div class="mdc-button__ripple"></div>
       <span class="mdc-button__label">Get Market Value</span>
     </button>
+    <h2 id="market-value" style="display: none">
+      Market Value Predicted: ??? €
+    </h2>
   </body>
 </html>
